tests/unary/unary.exp
Error: unary.js:8
  8:   return -y; // error, we don't allow coercion here
              ^^ y. Expected number instead of
  8:   return -y; // error, we don't allow coercion here
               ^ string

Error: unary.js:12
 12:   return ~y;  // error, we don't allow coercion here
               ^ string [1] is incompatible with number [2].
  References:
   11: function x3(y: string) {
                      ^^^^^^ [1]: string
   12:   return ~y;  // error, we don't allow coercion here
                ^^ [2]: number

Error: unary.js:19
 19: (-1: void); // error, number ~> void
      ^^ Cannot cast `-1` to undefined because number [1] is incompatible with undefined [2].
  References:
   19: (-1: void); // error, number ~> void
        ^^ [1]: number
   19: (-1: void); // error, number ~> void
            ^^^^ [2]: undefined

Error: update.js:12
 12:     y++; // error, we don't allow coercion here
         ^ string. The operand of an arithmetic operation must be a number.

Error: update.js:12
 12:     y++; // error, we don't allow coercion here
         ^^^ number. This type is incompatible with
 11:   function(y: string) {
                   ^^^^^^ string

Error: update.js:14
 14:     y++; // error, but you still can't write a number to a string
         ^^^ number. This type is incompatible with
 11:   function(y: string) {
                   ^^^^^^ string

Error: update.js:18
 18:     y--; // error, we don't allow coercion here
         ^ string. The operand of an arithmetic operation must be a number.

Error: update.js:18
 18:     y--; // error, we don't allow coercion here
         ^^^ number. This type is incompatible with
 17:   function(y: string) {
                   ^^^^^^ string

Error: update.js:22
 22:     ++y; // error, we don't allow coercion here
         ^^^ number. This type is incompatible with
 21:   function(y: string) {
                   ^^^^^^ string

Error: update.js:22
 22:     ++y; // error, we don't allow coercion here
           ^ string. The operand of an arithmetic operation must be a number.

Error: update.js:26
 26:     --y; // error, we don't allow coercion here
         ^^^ number. This type is incompatible with
 25:   function(y: string) {
                   ^^^^^^ string

Error: update.js:26
 26:     --y; // error, we don't allow coercion here
           ^ string. The operand of an arithmetic operation must be a number.

Error: update.js:31
 31:     y++; // error, can't update const
         ^ y. const cannot be reassigned
 30:     const y = 123;
               ^ const y

Error: update.js:32
 32:     y--; // error, can't update const
         ^ y. const cannot be reassigned
 30:     const y = 123;
               ^ const y


Found 14 errors
